@@ -1,2 +1,7 @@
 # AuctionGame
 Multi Console auction Game with dealer app and player app.
+
+# getting started
+To use this game, clone this repo, open the console, then
+change directory in to each app in its turn, and type:
+$ java --enable-preview -jar DealerAuctionGame.jar/PlayerAuctionGame.jar
